--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
-.App {
-  padding: 30px;
-  display: flex;
-}
 
-.App > div {
-  margin-right: 50px;
-}
 
-.error {
+/* .error {
   border: red 1px solid;
 }
 
@@ -17,7 +10,7 @@
 
 .active-filter {
   background-color: aquamarine;
-}
+} */
 
 .is-done {
   opacity: 0.5;
